--- a/.github/ci-cd.yml
+++ b/.github/ci-cd.yml
@@ -3,7 +3,7 @@ name: Frontend CI/CD
 on:
   push:
     branches:
-      - main  # Автоматический деплой при пуше в main
+      - main 
 
 jobs:
   build:
