--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Копирование проекта в рабочую директорию
         run: |
           mkdir -p /home/okr_web
+          pwd
           ls
-          ls ./okr_web
-          cp -r ./okr_web /home/okr_web
+          cp -r . /home/okr_web
 
       - name: Перезапуск Nginx
         run: sudo systemctl restart nginx
